--- a/test/index.html
+++ b/test/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>BBSlider test</title>
+    <title>multirangeslider test</title>
     <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
-    <link rel="stylesheet" href="../dist/bbslider.css">
+    <link rel="stylesheet" href="../dist/multirangeslider.css">
 </head>
 <body>
 <div id="qunit"></div>
@@ -15,7 +15,7 @@
 <script src="../node_modules/simulant/dist/simulant.umd.js"></script>
 <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
 <script src="../node_modules/babel-polyfill/dist/polyfill.js"></script>
-<script src="../dist/bbslider-dev.js"></script>
+<script src="../dist/multirangeslider-dev.js"></script>
 <script src="utils.js"></script>
 <script src="test.js"></script>
 </body>
