--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
 <script src="../node_modules/simulant/dist/simulant.umd.js"></script>
 <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
 <script src="../node_modules/babel-polyfill/dist/polyfill.js"></script>
-<script src="../dist/multirangeslider-dev.js"></script>
+<script src="../dist/multirangeslider.js"></script>
 <script src="utils.js"></script>
 <script src="test.js"></script>
 </body>
