--- a/test/index.html
+++ b/test/index.html
@@ -10,8 +10,9 @@
 <body>
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
-<div id="target"></div>
-<div id="common"></div>
+<div id="target_1"></div>
+<div id="target_2"></div>
+<div id="common_1"></div>
 <script src="../node_modules/simulant/dist/simulant.umd.js"></script>
 <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
 <script src="../node_modules/babel-polyfill/dist/polyfill.js"></script>
